--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,19 +23,19 @@ jobs:
         run: |
           if [ "${{ github.ref }}" == "refs/heads/main" ]; then
             echo "ENVIRONMENT=production" >> $GITHUB_ENV
-            echo "DATABASE_URL=${{ secrets.PROD_DATABASE_URL }}" >> $GITHUB_ENV
+            echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> $GITHUB_ENV
             # Ajouter d'autres variables d'environnement de production si nécessaire
           elif [ "${{ github.ref }}" == "refs/heads/develop" ]; then
-            echo "ENVIRONMENT=development" >> $GITHUB_ENV
-            echo "DATABASE_URL=${{ secrets.DEV_DATABASE_URL }}" >> $GITHUB_ENV
+            echo "ENVIRONMENT=dev" >> $GITHUB_ENV
+            echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> $GITHUB_ENV
             # Ajouter d'autres variables d'environnement de développement si nécessaire
           elif [ "${{ github.ref }}" == "refs/heads/test" ]; then
             echo "ENVIRONMENT=test" >> $GITHUB_ENV
-            echo "DATABASE_URL=${{ secrets.TEST_DATABASE_URL }}" >> $GITHUB_ENV
+            echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> $GITHUB_ENV
             # Ajouter d'autres variables d'environnement de test si nécessaire
           fi
 
       - name: Build and Deploy
         run: |
-          echo "Running deployment for $ENVIRONMENT environment..."
+          echo "Running deployment for $ENVIRONMENT environment... "
           # Ajouter les commandes pour construire et déployer l'application
