--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,38 +4,16 @@ on:
   push:
     branches:
       - main
-      - develop
-      - test
   pull_request:
     branches:
       - main
-      - develop
-      - test
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    environment: production
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
       
       - name: Set environment variables
         run: |
-          if [ "${{ github.ref }}" == "refs/heads/main" ]; then
-            echo "ENVIRONMENT=production" >> $GITHUB_ENV
-            echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> $GITHUB_ENV
-            # Ajouter d'autres variables d'environnement de production si nécessaire
-          elif [ "${{ github.ref }}" == "refs/heads/develop" ]; then
-            echo "ENVIRONMENT=dev" >> $GITHUB_ENV
-            echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> $GITHUB_ENV
-            # Ajouter d'autres variables d'environnement de développement si nécessaire
-          elif [ "${{ github.ref }}" == "refs/heads/test" ]; then
-            echo "ENVIRONMENT=test" >> $GITHUB_ENV
-            echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> $GITHUB_ENV
-            # Ajouter d'autres variables d'environnement de test si nécessaire
-          fi
-
-      - name: Build and Deploy
-        run: |
-          echo "Running deployment for $ENVIRONMENT environment... "
-          # Ajouter les commandes pour construire et déployer l'application
+               echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" 
