--- a/.github/workflows/ci-cd.prod.yml
+++ b/.github/workflows/ci-cd.prod.yml
@@ -174,8 +174,8 @@ jobs:
           url: ${{ secrets.DISCORD_WEBHOOK_URL }}
           title: "🚀 Déploiement réussi : ${{ github.sha }} sur PRODUCTION 🎉"
           message: "Voir les modifications : ${{ github.event.compare }}."
-          username: "PreproductionBOT"
-          avatar: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR9SYdK1M7jEIJgdj9foHiEoUdUiYxfREv3jg&s"
+          # username: "PreproductionBOT"
+          # avatar: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR9SYdK1M7jEIJgdj9foHiEoUdUiYxfREv3jg&s"
 
       - name: Notification d'échec 💥
         uses: containrrr/shoutrrr-action@v1
@@ -183,5 +183,5 @@ jobs:
         with:
           url: ${{ secrets.DISCORD_WEBHOOK_URL }}
           message: "❗ Consultez les logs pour plus de détails. Voir les modifications : ${{ github.event.compare }}."
-          username: "PreproductionBOT"
-          avatar: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR9SYdK1M7jEIJgdj9foHiEoUdUiYxfREv3jg&s"
+          # username: "PreproductionBOT"
+          # avatar: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR9SYdK1M7jEIJgdj9foHiEoUdUiYxfREv3jg&s"
