--- a/satsquare/package.json
+++ b/satsquare/package.json
@@ -79,6 +79,7 @@
     "@types/socket.io-client": "^3.0.0",
     "autoprefixer": "^10.4.19",
     "concurrently": "^8.2.2",
+    "cypress": "^13.14.0",
     "eslint": "^8.0.0",
     "eslint-config-next": "14.2.3",
     "jest": "^29.7.0",
