--- a/.github/workflows/ci-cd.prod.yml
+++ b/.github/workflows/ci-cd.prod.yml
@@ -90,7 +90,7 @@ jobs:
           export REDIS_URL=${{ secrets.REDIS_URL }}
           cd ./satsquare
           npm ci
-          # npm run test:e2e  #checking the health of the CICD only for testing porposes 
+          npm run test:e2e  
 
   deps-vulnerability:
     needs: [e2e-tests, unit-tests]
